--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
 	<string name="app_name">Decimal to Binary</string>
 	<!-- Conversion Types -->
 	<string name="decimal">Decimal:</string>
-	<string name="binary">Binary</string>
+	<string name="binary">Binary:</string>
 	<!-- Buttons -->
 	<string name="convert">Convert</string>
 </resources>
