finally fixed the fonts on spinner items. What a pain.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,9 @@
 	<string name="binary">Binary:</string>
 	<!-- Buttons -->
 	<string name="convert">Convert</string>
+	<!-- Spinners -->
+	<string-array name="number_systems_spinner">
+		<item>Decimal</item>
+		<item>Binary</item>
+	</string-array>
 </resources>
